--- a/fav-music/index.html
+++ b/fav-music/index.html
@@ -5,8 +5,7 @@
     <title>fav music</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
-    <!-- <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'> -->
+    <link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
     <link rel='stylesheet' href='../styles.css'>
 </head>
 
@@ -30,16 +29,16 @@
                 <ul>
                     <li><a href='/'>home</a></li>
                     |
-                    <li><a href='projects.html'>projects</a></li>
+                    <li><a href='../projects.html'>projects</a></li>
                     |
-                    <li><a href='journal.html'>journal</a></li>
+                    <li><a href='../journal.html'>journal</a></li>
                     |
-                    <li><a href='contact.html'>contact</a></li>
+                    <li><a href='../contact.html'>contact</a></li>
                     |
 					<div class="dropdown">
 						<span class="dropbutton"><a href="">more</a></span>
 						<div class="dropdown-content">
-							<a href="options.html">options</a>
+							<a href="../options.html">options</a>
 						</div>
 					</div>
                 </ul>
@@ -132,4 +131,41 @@
 	finally {
 		document.adoptedStyleSheets = [font_stylesheet];
 	}
+    // themes
+    const styleEl = document.createElement("style");
+	try {
+		const str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
+		const arr_stored_theme_key = JSON.parse(str_stored_theme_key);
+		addStyleSheetRules(arr_stored_theme_key);
+	}
+	catch (error) {
+		addStyleSheetRules([['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4.png") no-repeat center center;']]]);
+	}
+
+	function addStyleSheetRules(rules) {
+        try{
+            document.head.removeChild(styleEl);
+        }
+        catch (error) {
+        }
+        document.head.appendChild(styleEl);
+        const styleSheet = styleEl.sheet;
+
+        for (let rule of rules) {
+            let i = 1, selector = rule[0], propStr = "";
+            if (Array.isArray(rule[1][0])) {
+                rule = rule[1];
+                i = 0;
+            }
+            for (; i < rule.length; i++) {
+                const prop = rule[1];
+                propStr += `${prop[0]}: ${prop[1]}${prop[2] ? " !important" : ""};\n`;
+            }
+
+            styleSheet.insertRule(
+                `${selector}{${propStr}}`,
+                styleSheet.cssRules.length,
+            );
+        }
+    }
 </script>
