--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		created by garrett.
 		<br>
 		<br>this website is designed to be viewed on desktop with the firefox browser. | last updated:
-		<span id="lastUpdateDate" style="display: initial;">31 may 2025</span>.
+		<span id="lastUpdateDate" style="display: initial;">17 june 2025</span>.
 	</footer>
 
 </body>
@@ -89,9 +89,11 @@
 		}
 	);
 	const font_stylesheet = new CSSStyleSheet();
+	const styleEl = document.createElement("style");
 	if (!sessionStorage.getItem("visited")){
 		font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
 		document.adoptedStyleSheets = [font_stylesheet];
+		addStyleSheetRules([['body:before', ['background', 'url("assets/bg-test-purple4.png") no-repeat center center;']]]);
 		sessionStorage.setItem("visited", true);
 	}
 	else {
@@ -104,6 +106,42 @@
 		finally {
 			document.adoptedStyleSheets = [font_stylesheet];
 		}
+		try {
+			const str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
+			const arr_stored_theme_key = JSON.parse(str_stored_theme_key);
+			addStyleSheetRules(arr_stored_theme_key);
+		}
+		catch (error) {
+			addStyleSheetRules([['body:before', ['background', 'url("assets/bg-test-purple4.png") no-repeat center center;']]]);
+		}
 	}
+
+	// function for theme switching
+	function addStyleSheetRules(rules) {
+        try{
+            document.head.removeChild(styleEl);
+        }
+        catch (error) {
+        }
+        document.head.appendChild(styleEl);
+        const styleSheet = styleEl.sheet;
+
+        for (let rule of rules) {
+            let i = 1, selector = rule[0], propStr = "";
+            if (Array.isArray(rule[1][0])) {
+                rule = rule[1];
+                i = 0;
+            }
+            for (; i < rule.length; i++) {
+                const prop = rule[1];
+                propStr += `${prop[0]}: ${prop[1]}${prop[2] ? " !important" : ""};\n`;
+            }
+
+            styleSheet.insertRule(
+                `${selector}{${propStr}}`,
+                styleSheet.cssRules.length,
+            );
+        }
+    }
 	
 </script>
