--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
-	<!-- <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'> -->
 	<link rel='stylesheet' href='styles.css'>
 </head>
 
@@ -334,9 +333,10 @@
 		ditherButton.onclick = backToOriginal;
 	}
 
+	// fonts
 	const font_stylesheet = new CSSStyleSheet();
 	try {
-			font_stylesheet.insertRule(sessionStorage.font);
+		font_stylesheet.insertRule(sessionStorage.font);
 	}
 	catch (error) {
 		font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
@@ -344,5 +344,43 @@
 	finally {
 		document.adoptedStyleSheets = [font_stylesheet];
 	}
+
+	// themes
+	const styleEl = document.createElement("style");
+	try {
+		const str_stored_theme_key = sessionStorage.getItem("selected_theme_key");
+		const arr_stored_theme_key = JSON.parse(str_stored_theme_key);
+		addStyleSheetRules(arr_stored_theme_key);
+	}
+	catch (error) {
+		addStyleSheetRules([['body:before', ['background', 'url("assets/bg-test-purple4.png") no-repeat center center;']]]);
+	}
+
+	function addStyleSheetRules(rules) {
+        try{
+            document.head.removeChild(styleEl);
+        }
+        catch (error) {
+        }
+        document.head.appendChild(styleEl);
+        const styleSheet = styleEl.sheet;
+
+        for (let rule of rules) {
+            let i = 1, selector = rule[0], propStr = "";
+            if (Array.isArray(rule[1][0])) {
+                rule = rule[1];
+                i = 0;
+            }
+            for (; i < rule.length; i++) {
+                const prop = rule[1];
+                propStr += `${prop[0]}: ${prop[1]}${prop[2] ? " !important" : ""};\n`;
+            }
+
+            styleSheet.insertRule(
+                `${selector}{${propStr}}`,
+                styleSheet.cssRules.length,
+            );
+        }
+    }
 
 </script>
