fixed scaling issue

--- a/options.html
+++ b/options.html
@@ -96,7 +96,8 @@
     // themes
     const styleEl = document.createElement("style");
     const light_theme = [
-        ['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4.png") no-repeat center center;']]
+        ['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4.png") no-repeat center center;']],
+        ['body:before', ['background-size', 'cover']]
     ];
     const dark_theme = [
         ['body', ['color', 'white']],
