--- a/projects/ggec.html
+++ b/projects/ggec.html
@@ -158,7 +158,7 @@
 		addStyleSheetRules(arr_stored_theme_key);
 	}
 	catch (error) {
-		addStyleSheetRules([['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4.png") no-repeat center center;']]]);
+		addStyleSheetRules([['body:before', ['background', 'url("https://hytheaway.github.io/assets/bg-test-purple4.png") no-repeat center center;']], ['body:before', ['background-size', 'cover']]]);
 	}
 
 	function addStyleSheetRules(rules) {
