--- a/projects.html
+++ b/projects.html
@@ -353,7 +353,7 @@
 		addStyleSheetRules(arr_stored_theme_key);
 	}
 	catch (error) {
-		addStyleSheetRules([['body:before', ['background', 'url("assets/bg-test-purple4.png") no-repeat center center;']]]);
+		addStyleSheetRules([['body:before', ['background', 'url("assets/bg-test-purple4.png") no-repeat center center;']], ['body:before', ['background-size', 'cover']]]);
 	}
 
 	function addStyleSheetRules(rules) {
