--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		created by garrett.
 		<br>
 		<br>this website is designed to be viewed on desktop with the firefox browser. | last updated:
-		<span id="lastUpdateDate" style="display: initial;">19 june 2025</span>.
+		<span id="lastUpdateDate" style="display: initial;">20 june 2025</span>.
 	</footer>
 
 </body>
@@ -93,7 +93,7 @@
 	if (!sessionStorage.getItem("visited")){
 		font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
 		document.adoptedStyleSheets = [font_stylesheet];
-		addStyleSheetRules([['body:before', ['background', 'url("assets/bg-test-purple4.png") no-repeat center center;']]]);
+		addStyleSheetRules([['body:before', ['background', 'url("assets/bg-test-purple4.png") no-repeat center center;']], ['body:before', ['background-size', 'cover']]]);
 		sessionStorage.setItem("visited", true);
 	}
 	else {
