support more display sizes. added lilex font.

--- a/contact.html
+++ b/contact.html
@@ -45,12 +45,14 @@
 				</ul>
 			</div>
 			<hr style="color: white;">
-			<br>
-			<p style='text-align: center;'>do not contact me.</p>
-			<br>
-			<br>
-			<p style='text-align: center;'><a href='mailto:hytheaway@gmail.com' style='color: black;'>email.</a></p>
-			<br>
+			<span style="font-size: 1.65vmin;">
+				<br>
+				<p style='text-align: center;'>do not contact me.</p>
+				<br>
+				<br>
+				<p style='text-align: center;'><a href='mailto:hytheaway@gmail.com' style='color: black;'>email.</a></p>
+				<br>
+			</span>
 		</div>
 	</div>
 	<footer>
