--- a/journal.html
+++ b/journal.html
@@ -73,7 +73,7 @@
 								<br>
 								<br>
 								<span style="text-align: center;">
-									<img src="assets/desk-mbp-dither.jpg" class="borderimg1class" style="max-width: 50%; max-height: 100vh; margin: auto;">
+									<img src="assets/desk-mbp-dither.jpg" class="borderimg1class" style="width: 75vmin; margin: auto;">
 									<br>what do you notice about this photo?
 								</span>
 								<br>okay, probably not much. it's a laptop connected to a couple monitors. a keyboard, a mouse, some headphones, books, nothing worth a second thought, and you'd be entirely right. that's an m2 max macbook pro, perfectly capable of driving two montiors and plenty of peripherals through a
@@ -81,7 +81,7 @@
 								<br>
 								<br>
 								<span style="text-align: center;">
-									<img src="assets/desk-mba-dither.jpg" class="borderimg1class" style="max-width: 50%; max-height: 100vh; margin: auto;">
+									<img src="assets/desk-mba-dither.jpg" class="borderimg1class" style="width: 75vmin; margin: auto;">
 									<br>okay, well, what do you notice about <i>this</i> photo?
 								</span>
 								<br>well, uh. as long as you know that's a base m2 macbook air, that kind of changes things. base m2 macbooks only support one external display, but i've got two here. i promise, there are no tricks here, and in fact, it gets even more baffling.
@@ -103,7 +103,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="flex-container" style="border-bottom: 2px dashed lightgrey;">
+					<div class="flex-container" style="border-bottom: 0.3vmin dashed lightgrey;">
 						<div class="leftside" style="text-align: left;">
 							<p style="font-size: 90%;">
 								for the well informed, this all seems like i'm leading up to displaylink adapters. and, yes, you're right, that's exactly how i got around this. my signal flow is computer -> 20gbps switcher -> caldigit ts3 dock, which i use the dedicated output for my main display and a displaylink adapter
@@ -157,15 +157,15 @@
 						</div>
 						<div class="rightside" style="display: flex; text-align: center; flex-direction: column; justify-content: space-between;">
 							<figure>
-								<img src="assets/desk-3d-print-tower-dither.jpg" class="borderimg1class" style="max-width: 80%; max-height: 70vh; margin: auto;">
+								<img src="assets/desk-3d-print-tower-dither.jpg" class="borderimg1class" style="width: 50vmin; margin: auto;">
 								<figcaption><p style="font-size: 70%;"><i>3d printed tower that holds my usb hubs, mini network switch, ts3, thunderbolt switcher, and scarlett solo.</i></p></figcaption>
 							</figure>
 							<figure>
-								<img src="assets/desk-pc-dither.jpg" class="borderimg1class" style="max-width: 80%; max-height: 70vh; margin: auto;">
+								<img src="assets/desk-pc-dither.jpg" class="borderimg1class" style="width: 60vmin; margin: auto;">
 								<figcpation><p style="font-size: 70%;"><i>my pc case is the velkase velka 3; steam deck and ps5 controller for scale.</i></p></figcpation>
 							</figure>
 							<figure>
-								<img src="assets/desk-top-dither.jpg" class="borderimg1class" style="max-width: 80%; max-height: 70vh; margin: auto; align-self: flex-end;">
+								<img src="assets/desk-top-dither.jpg" class="borderimg1class" style="width: 60vmin; margin: auto; align-self: flex-end;">
 								<figcaption><p style="font-size: 70%;"><i>desk from above.</i></p></figcaption>
 							</figure>
 						</div>
@@ -175,7 +175,7 @@
 				<article id="aug2024">
 					<!-- article title -->
 					<h3 style="text-align: right;">ai (aug 2024)</h3>
-					<div class="flex-container" style='border-bottom: 2px dashed lightgrey;'>
+					<div class="flex-container" style='border-bottom: 0.3vmin dashed lightgrey;'>
 						<div class="rightside" style="text-align: right;">
 							<p style="font-size: 90%;">
 								<span style="display: inline; font-size: 70%;">(for variety's sake, we're on the right side for this one.)</span>
@@ -275,7 +275,7 @@
 				<article id="jul2024">
 					<!-- article title -->
 					<h3>the immersion question (jul 2024)</h3>
-					<div class="flex-container" style='border-bottom: 2px dashed lightgrey;'>
+					<div class="flex-container" style='border-bottom: 0.3vmin dashed lightgrey;'>
 						<div class="leftside" style="text-align: left;">
 							<p style="font-size: 90%;">
 								by far, the question that i dislike the most within the world of immersive audio.
@@ -331,7 +331,7 @@
 								<br>
 								<br>yes, it's an important question, but what good is that if no one actually cares about the answer? has the lack of an answer stopped literally anyone from progressing research in the field?
 								has the lack of an answer prevented any company from attempting to establish a vertical for themselves in this brand new form of content creation and consumption? in fact, the lack of an answer
-								doesn't even prevent any single content creator from engaging in the field. but these petulant, pedantic, self-aggrandizing <span id="profanity" style="display: none;" onmouseout="this.style.display='none'; membersOfMutual.style.display='inline'"><b>circlejerking self-proclaimed "intellectuals"</b></span><span id="membersOfMutual" style="font-family: 'snell roundhand', cursive; font-size: 120%; display: inline; background: url(assets/censor10.gif) repeat-x;" onmouseover="this.style.display='none'; profanity.style.display='inline'">members of a mutual admiration society</span> certainly
+								doesn't even prevent any single content creator from engaging in the field. but these petulant, pedantic, self-aggrandizing <span id="profanity" style="display: none;" onmouseout="this.style.display='none'; membersOfMutual.style.display='inline'"><b>circlejerking self-proclaimed "intellectuals"</b></span><span id="membersOfMutual" style="font-family: 'snell roundhand', cursive; font-size: 120%; display: inline; background: url(assets/censor10.gif) 2vmin repeat-x" onmouseover="this.style.display='none'; profanity.style.display='inline'">members of a mutual admiration society</span> certainly
 								<i>do</i> prevent greener individuals from creating the very content that this field is so desperately in need of.
 								<br>
 								<br>honestly, these people are a small, small, small subset of those discussing the question of immersion. there have been some amazing papers published that do make a genuine effort to investigate the qualities of immersion, and how best to apply those
@@ -350,7 +350,7 @@
 				<article id="may2024">
 					<!-- article title -->
 					<h3>a return to form (may 2024)</h3>
-					<div class="flex-container" style='border-bottom: 2px dashed lightgrey;'>
+					<div class="flex-container" style='border-bottom: 0.3vmin dashed lightgrey;'>
 						<div class="leftside" style="text-align: left;">
 							<p style="font-size: 90%;">
 								and it is!
@@ -368,8 +368,8 @@
 							</p>
 						</div>
 						<div class="rightsidecenter">
-							<img src="assets/ps2cool-dither.jpg" class="borderimg1class" style="max-width: 50%; max-height: 100vh; margin: auto;">
-							<img src="assets/ififits-dither.jpg" class="borderimg1class" style="max-width: 30%; max-height: 100vh; margin: auto;">
+							<img src="assets/ps2cool-dither.jpg" class="borderimg1class" style="width: 40vmin; margin: auto;">
+							<img src="assets/ififits-dither.jpg" class="borderimg1class" style="width: 30vmin; margin: auto;">
 							<br>and odhrán seems to like it too.
 						</div>
 					</div>
@@ -378,7 +378,7 @@
 				<article id="apr2024">
 					<!-- article title -->
 					<h3>fpgbc (apr 2024)</h3>
-					<div class="flex-container" style='border-bottom: 2px dashed lightgrey;'>
+					<div class="flex-container" style='border-bottom: 0.3vmin dashed lightgrey;'>
 						<div class="leftside" style="text-align: left;">
 							<p style="font-size: 90%;">
 								akin to that one flight i took that one time.
@@ -430,13 +430,13 @@
 							</p>
 						</div>
 						<div class="rightsidecenter">
-							<img src="assets/fpgbc-1-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
-							<img src="assets/fpgbc-2-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
+							<img src="assets/fpgbc-1-dither.jpg" class="borderimg1class" style="width: 35vmin; margin: auto;">
+							<img src="assets/fpgbc-2-dither.jpg" class="borderimg1class" style="width: 35vmin; margin: auto;">
 							<br>
-							<img src="assets/fpgbc-3-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
-							<img src="assets/fpgbc-4-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
+							<img src="assets/fpgbc-3-dither.jpg" class="borderimg1class" style="width: 35vmin; margin: auto;">
+							<img src="assets/fpgbc-4-dither.jpg" class="borderimg1class" style="width: 35vmin; margin: auto;">
 							<br>
-							<img src="assets/fpgbc-5-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
+							<img src="assets/fpgbc-5-dither.jpg" class="borderimg1class" style="width: 35vmin; margin: auto;">
 						</div>
 					</div>
 				</article>
@@ -444,7 +444,7 @@
 				<article id="dec2023">
 					<!-- article title -->
 					<h3>gameboy color mod no. 1 (dec 2023)</h3>
-					<div class="flex-container" style='border-bottom: 2px dashed lightgrey;'>
+					<div class="flex-container">
 						<div class="leftside" style="text-align: left;">
 							<p style="font-size: 90%;">
 								can you spot the difference between these two?
@@ -463,8 +463,8 @@
 							</p>
 						</div>
 						<div class="rightsidecenter">
-							<img src="assets/both_gameboys-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
-							<img src="assets/modded_gameboy-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
+							<img src="assets/both_gameboys-dither.jpg" class="borderimg1class" style="width: 35vmin; margin: auto;">
+							<img src="assets/modded_gameboy-dither.jpg" class="borderimg1class" style="width: 35vmin; margin: auto;">
 							<br>but it's cool enough.
 						</div>
 					</div>
