--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
-	<!-- <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'> -->
 	<link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
 	<div class='content'>
-
 		<div class='header'>
 			<div class='links'>
 				[ path: 
@@ -44,15 +42,16 @@
 				</ul>
 			</div>
 			<hr>
-			<br>
 			<div class='flex-container'>
-				<div class='leftside' style="display: flex; align-items: center; justify-content: center;">
+				<br>
+				<div class='leftside' style="display: flex; align-items: center; justify-content: center; flex-flow: column;">
 					<figure style="width: 200%;">
 						<img id="randImg" src=''/>
 						<figcaption>this is a photo of <a href="me.html">me</a>.</figcaption>
 					</figure>
 				</div>
 				<div class='rightside'>
+					<br>
 					<h2>welcome to <i>myspace!</i></h2>
 					<p title='there is always a hidden meaning.'><small>this is my second paragraph with no hidden meaning.</small></p>
 					<br>
@@ -64,17 +63,17 @@
 					<p>this is also where i keep records of my <a href='journal.html'>thoughts</a>.</p>
 					<br>
 					<p>maybe you'll also <a href='contact.html'>contact</a> me.</p>
+					<br>
+					<br>
 				</div>
 			</div>
-			<br>
-			<br>
 		</div>
 	</div>
 	<footer>
 		created by garrett.
 		<br>
 		<br>this website is designed to be viewed on desktop with the firefox browser. | last updated:
-		<span id="lastUpdateDate" style="display: initial;">20 june 2025</span>.
+		<span id="lastUpdateDate" style="display: initial;">10 july 2025</span>.
 	</footer>
 
 </body>
@@ -145,3 +144,7 @@
     }
 	
 </script>
+
+<style>
+
+</style>
