--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 			<hr>
 			<!-- entry -->
 			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
 				<div class='leftside'>
 					<img src='assets/ggec-title-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>ggec</p>
