--- a/projects/aoifernet.html
+++ b/projects/aoifernet.html
@@ -20,7 +20,7 @@
                 /
                 <a href="aoifernet.html">aoifernet/m3--</a>
                 ]
-                <img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right;" onclick="backToOriginal()">
+                <img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right; width: 10vmin;" onclick="backToOriginal()">
             </div>
         </div>
         <div class='container'>
