--- a/projects/cerialv2.html
+++ b/projects/cerialv2.html
@@ -20,7 +20,7 @@
 				/
 				<a href="cerialv2.html">cerial ver. 2</a>
 				]
-				<img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right;" onclick="backToOriginal()">
+				<img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right; width: 10vmin;" onclick="backToOriginal()">
 			</div>
 		</div>
 
