--- a/journal.html
+++ b/journal.html
@@ -18,7 +18,7 @@
 				/
 				<a href="journal.html">journal</a>
 				]
-				<img id="dither_button" src="assets/dither-toggle-button.png" style="float: right;" onclick="backToOriginal()">
+				<img id="dither_button" src="assets/dither-toggle-button.png" style="float: right; width: 10vmin;" onclick="backToOriginal()">
 			</div>
 		</div>
 		<div class='container'>
