--- a/projects/binauralobjectsfeb24.html
+++ b/projects/binauralobjectsfeb24.html
@@ -21,7 +21,7 @@
                 /
                 <a href="binauralobjectsfeb24.html">binaural objects</a>
                 ]
-                <img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right;" onclick="backToOriginal()">
+                <img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right; width: 10vmin;" onclick="backToOriginal()">
             </div>
         </div>
         <div class='container'>
