--- a/projects/gghsf.html
+++ b/projects/gghsf.html
@@ -21,7 +21,7 @@
                 /
                 <a href="gghsf.html">ggh&sf</a>
                 ]
-                <img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right;" onclick="backToOriginal()">
+                <img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right; width: 10vmin;" onclick="backToOriginal()">
             </div>
         </div>
         <div class='container'>
