add image-diff project

--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
             <h2 style="text-align: center;">page not found.</h2>
             <br>
             <p style="text-align: center;">hello.
-            <br>if you've managed to stumble across this page, please report it by reaching out to me <a href="https://hytheaway.github.io/contact.html">here</a>.
+            <br>if you've managed to stumble across this page, you can report it by reaching out to me <a href="https://hytheaway.github.io/contact.html">here</a>.
             <br>
             <br>
             <br>please don't fret. follow the wise words of our ancestors:
