--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,29 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
 				<div class='leftside'>
+					<img src='assets/image-diff-dither.png' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>image-diff.py</p>
+					<p style='line-height: 1.0;'><small><i>this ain't my first rodeo.</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='projects/image-diff.html'>image-diff.py (aug 2025)</a></h2>
+					<p>a simple, free utility.</p>
+					<br>
+					<p style='font-size: 80%;'>
+						too many things are paid now.
+						<br>or maybe they should've always been.
+						<br>not this one, though.
+					</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>python, pillow.
+					</p>
+				</div>
+			</div>
+			<!-- entry -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey; flex-flow: row;'>
+				<div class='leftside'>
 					<img src='assets/ggec-title-dither.jpg' class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>ggec</p>
 					<p style='line-height: 1.0;'><small><i>reinforcing my trained disdain for c.</i></small></p>
