Update terminology, add creation date

--- a/options.html
+++ b/options.html
@@ -95,7 +95,7 @@
     // does this browser support sessionStorage?
     const storage_support_label = document.getElementById("storage_support_label");
     if (typeof(Storage) !== "undefined") {
-        storage_support_label.innerHTML = "your browser does support configuration.";
+        storage_support_label.innerHTML = "your browser supports configuration.";
     }
 
     // themes
