--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 		</div>
 	</div>
 	<footer>
-		created by garrett.
+		created by garrett. | this website is designed to be viewed on desktop with the <a href="https://www.firefox.com/">firefox</a> browser.
 		<br>
-		<br>this website is designed to be viewed on desktop with the firefox browser. | last updated:
-		<span id="lastUpdateDate" style="display: initial;">22 oct 2025</span>.
+		<br>created 13 dec 2023. | last updated:
+		<span id="lastUpdateDate" style="display: initial;">16 dec 2025</span>.
 	</footer>
 
 </body>
