--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,11 @@
 		border-width: 1px;
 		border-color: white;
 	}
+	@media only screen and (max-width: 800px) {
+		span {
+			font-size: 100% !important;
+		}
+	}
 </style>
 
 <script>
