Update options.html for mobile view

--- a/options.html
+++ b/options.html
@@ -91,6 +91,30 @@
 </body>
 </html>
 
+<style>
+    @media only screen and (max-width: 800px) {
+        span {
+            margin-top: -5%;
+            font-size: 100% !important;
+            margin-bottom: -5%;
+        }
+        h3 {
+            font-size: 80% !important;
+        }
+        #storage_support_label {
+            font-size: 60% !important;
+        }
+        .leftside {
+            text-align: center !important;
+            font-size: 150%;
+        }
+        select {
+            width: 30%;
+            font-size: 150% !important;
+        }
+    }
+</style>
+
 <script>
     // does this browser support sessionStorage?
     const storage_support_label = document.getElementById("storage_support_label");
