--- a/projects/height-layer.html
+++ b/projects/height-layer.html
@@ -47,8 +47,8 @@
         </ul>
       </div>
       <hr>
-      <h4 style="text-align: center;">height layer comparison</h4>
-      <p style="text-align: center; font-size: 100%;">
+      <h3 style="text-align: center;">height layer comparison</h3>
+      <p style="text-align: center; font-size: 100%; margin-bottom: 0%;">
         select a binaural renderer.
         <br>
         <select name="renderer" id="renderer" onchange="changeRenderer(this.selectedIndex+1);">
